--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "express-locallibrary-tutorial",
   "version": "0.0.0",
+  "engines": {
+    "node": "16.13.1"
+  },
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
@@ -9,10 +12,12 @@
   },
   "dependencies": {
     "async": "^3.2.3",
+    "compression": "^1.7.4",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-validator": "^6.14.0",
+    "helmet": "^5.0.2",
     "http-errors": "~1.6.3",
     "luxon": "^2.3.0",
     "mongoose": "^6.1.8",
